syntax = "proto3";
service ZENRemoteService {
  rpc RunRemoteMethod (RemoteMethodRequest) returns (RemoteResult);
}
message RemoteMethodRequest {
  string method = 1;
  string class  =  2;
  string params = 3;
}
message RemoteResult {
  string result = 1;
  
}